--- a/TestJenkins/Dockerfile
+++ b/TestJenkins/Dockerfile
@@ -1,7 +1,7 @@
-# Base image
+# Base image for runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 80
+EXPOSE 8080
 
 # Build stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
@@ -18,7 +18,7 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./TestJenkins.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# Final image
+# Final stage
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
