--- a/TestJenkins/k8s/deployment.yaml
+++ b/TestJenkins/k8s/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: testjenkins
-        image: testjenkins:latest   # local image tag
+        image: testjenkins:latest
+        imagePullPolicy: Never        # <-- BU SATIRI EKLE
         ports:
         - containerPort: 80
