--- a/TestJenkins/k8s/deployment.yaml
+++ b/TestJenkins/k8s/deployment.yaml
@@ -18,3 +18,6 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 80
+          env:
+            - name: ASPNETCORE_URLS
+              value: "http://+:80"
